--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Document</title>   
 </head>
 <body>
+    <h1>Hola soy HTML</h1>
+
+    <p>Esto es un boton de JS</p>
     
 
+    <!--
+    <ul id="lista">
+    </ul>
+-->
     <script src="index.js"></script>
 </body>
 </html>
