--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 <body>
     <h1>Hola soy HTML</h1>
 
-    <p>Esto es un boton de JS</p>
-    
+    <ul id="lista"></ul>
 
-    <!--
-    <ul id="lista">
-    </ul>
--->
+
+ 
     <script src="index.js"></script>
 </body>
 </html>
