--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>   
 </head>
 <body>
+    <!--
     <h1>Hola soy HTML</h1>
 
     <ul id="lista"></ul>
+    
 
+    <button onClick="random()" class="btn btn-primary mt-5 m-auto">Cambia color de fondo</button>
 
- 
+    <label for="texto">Escriba loque quiera:</label>
+    <input id="texto" type="text" />
+    <div id="pantalla"></div>
+
+    -->
+
+    <h1 class="mb-5 text-center m-auto titular">PELICULAS POPULARES</h1>
+    <div class="contenedor" id="contenedor"></div>
+
+    <div class="paginacion">
+        <button id="btnAnterior" class="btn btn-primary m-2 p-1">Anterior</button>
+        <button id="btnSiguiente" class="btn btn-primary m-2 p-1">Siguiente</button>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 </html>
